--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ width: 15px;
       z-index: 1000;
     }
     #map.pin-cursor {
-      cursor: crosshair;
+      cursor: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png') 12 36, auto !important;
     }
       .leaflet-grab {
     cursor: default !important;
@@ -760,7 +760,6 @@ function slugify(str) {
     const handBtn = document.getElementById("handTool");
     const pinBtn = document.getElementById("pinTool");
     const mapEl = document.getElementById("map");
-    const pinCursorUrl = 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png';
     let searchLayer = null;
     let searchMarker = null;
     const greenIcon = L.icon({
@@ -846,33 +845,6 @@ function slugify(str) {
       }
       updateSaveButton();
     }
-    function applyPinCursor() {
-      if (!mapEl) return;
-      const img = new Image();
-      img.crossOrigin = 'anonymous';
-      img.onload = () => {
-        let w = img.width;
-        let h = img.height;
-        const max = 128;
-        let url = pinCursorUrl;
-        if (w > max || h > max) {
-          const scale = Math.min(max / w, max / h);
-          const canvas = document.createElement('canvas');
-          canvas.width = w * scale;
-          canvas.height = h * scale;
-          const ctx = canvas.getContext('2d');
-          ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-          url = canvas.toDataURL('image/png');
-          w = canvas.width;
-          h = canvas.height;
-        }
-        mapEl.style.cursor = `url(${url}) ${w / 2} ${h}, auto`;
-      };
-      img.src = pinCursorUrl;
-    }
-    function clearPinCursor() {
-      if (mapEl) mapEl.style.cursor = '';
-    }
     function selectTool(t) {
       currentTool = t;
       handBtn.classList.toggle("active", t === "hand");
@@ -880,10 +852,8 @@ function slugify(str) {
       if (mapEl) {
         if (t === "pin") {
           mapEl.classList.add("pin-cursor");
-          applyPinCursor();
         } else {
           mapEl.classList.remove("pin-cursor");
-          clearPinCursor();
         }
       }
       const cm = document.getElementById('centerMarker');
@@ -965,36 +935,25 @@ if (pinBtn) pinBtn.addEventListener("click", () => selectTool("pin"));
       const isVisited = warstwaId && warstwaId === visitedId;
       const isSztosy = warstwaId && warstwaId === sztosyId;
       if (warstwaId && warstwaId === orangeLayerId) {
-        const anchor = [size / 2, size];
         return L.icon({
           iconUrl: 'https://maps.gstatic.com/mapfiles/ms2/micons/orange-dot.png',
           iconSize: [size, size],
-          iconAnchor: anchor,
-          popupAnchor: [0, -anchor[1]],
-          tooltipAnchor: [0, -anchor[1]]
+          iconAnchor: [size / 2, size]
         });
       }
       if (warstwaId && warstwaId === movingLayerId) {
-        const anchor = [size / 2, size];
         return L.icon({
           iconUrl: 'https://maps.gstatic.com/mapfiles/ms2/micons/blue-dot.png',
           iconSize: [size, size],
-          iconAnchor: anchor,
-          popupAnchor: [0, -anchor[1]],
-          tooltipAnchor: [0, -anchor[1]]
+          iconAnchor: [size / 2, size]
         });
       }
 
       if (!emojiOrUrl || String(emojiOrUrl).trim() === "" || emojiOrUrl === "undefined") {
-        const w = size * 0.56;
-        const h = size * 0.9;
-        const anchor = [w / 2, h];
         return L.icon({
           iconUrl: 'https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi2_hdpi.png',
-          iconSize: [w, h],
-          iconAnchor: anchor,
-          popupAnchor: [0, -anchor[1]],
-          tooltipAnchor: [0, -anchor[1]]
+          iconSize: [size * 0.56, size * 0.9],
+          iconAnchor: [size * 0.28, size * 0.9]
         });
       }
 
@@ -1007,7 +966,6 @@ if (pinBtn) pinBtn.addEventListener("click", () => selectTool("pin"));
 
       if (isUrl) {
         const cls = isSztosy ? "emoji-obrys-sztosy" : "emoji-obrys";
-        const anchor = [size / 2, size];
         return L.divIcon({
           className: 'emoji-marker',
           html: `
@@ -1016,14 +974,11 @@ if (pinBtn) pinBtn.addEventListener("click", () => selectTool("pin"));
               ${overlay}
             </div>`,
           iconSize: [size, size],
-          iconAnchor: anchor,
-          popupAnchor: [0, -anchor[1]],
-          tooltipAnchor: [0, -anchor[1]]
+          iconAnchor: [size / 2, size]
         });
       }
 
       const cls = isSztosy ? "emoji-sztosy" : "";
-      const anchor = [size / 2, size];
 
       return L.divIcon({
         className: 'emoji-marker',
@@ -1033,9 +988,7 @@ if (pinBtn) pinBtn.addEventListener("click", () => selectTool("pin"));
             ${overlay}
           </div>`,
         iconSize: [size, size],
-        iconAnchor: anchor,
-        popupAnchor: [0, -anchor[1]],
-        tooltipAnchor: [0, -anchor[1]]
+        iconAnchor: [size / 2, size]
       });
     }
 
@@ -1748,29 +1701,28 @@ attachPopupHandlers(p.marker, p);
       };
       marker.on('popupclose', removeOnClose);
 
-      const handleSave = (e) => {
-        e.preventDefault();
-        e.stopPropagation();
-        const layerVal = container.querySelector("#warstwaNew").value.trim();
-        if (layerVal && !warstwy[layerVal]) addLayer(layerVal);
-        const catVal = container.querySelector("#kategoriaNew").value.trim();
-        if (catVal && !categories.has(catVal)) { categories.add(catVal); updateCategoryFilter(); }
-        const newId = crypto.randomUUID();
-        const data = {
-          id: newId,
-          IDpinezki: newId,
-          nazwa: container.querySelector("#nazwaNew").value,
-          opis: container.querySelector("#opisNew").value.replace(/\n/g, '<br>'),
-          warstwa: layerVal,
-          kategoria: catVal,
-          emoji: container.querySelector("#emojiNew").value,
-          nieaktywne: container.querySelector("#nieaktywneNew").checked,
-          lat: latlng.lat,
-          lng: latlng.lng,
-          dataDodania: Date.now(),
-          unsaved: true,
-          firebaseId: null
-        };
+        container.querySelector("#saveNew").addEventListener("click", (e) => {
+          e.stopPropagation();
+          const layerVal = container.querySelector("#warstwaNew").value.trim();
+          if (layerVal && !warstwy[layerVal]) addLayer(layerVal);
+          const catVal = container.querySelector("#kategoriaNew").value.trim();
+          if (catVal && !categories.has(catVal)) { categories.add(catVal); updateCategoryFilter(); }
+          const newId = crypto.randomUUID();
+          const data = {
+            id: newId,
+            IDpinezki: newId,
+            nazwa: container.querySelector("#nazwaNew").value,
+            opis: container.querySelector("#opisNew").value.replace(/\n/g, '<br>'),
+            warstwa: layerVal,
+            kategoria: catVal,
+            emoji: container.querySelector("#emojiNew").value,
+            nieaktywne: container.querySelector("#nieaktywneNew").checked,
+            lat: latlng.lat,
+            lng: latlng.lng,
+            dataDodania: Date.now(),
+            unsaved: true,
+            firebaseId: null
+          };
         saved = true;
 
         const warstwaN = data.warstwa || "Inne";
@@ -1802,18 +1754,12 @@ attachPopupHandlers(p.marker, p);
         generujListeWarstw();
         updateSaveButton();
         map.closePopup();
-      };
-      const handleCancel = (e) => {
-        e.preventDefault();
+      });
+
+      container.querySelector("#cancelNew").addEventListener("click", (e) => {
         e.stopPropagation();
         map.closePopup();
-      };
-      const saveEl = container.querySelector("#saveNew");
-      const cancelEl = container.querySelector("#cancelNew");
-      saveEl.addEventListener('click', handleSave);
-      saveEl.addEventListener('touchend', handleSave);
-      cancelEl.addEventListener('click', handleCancel);
-      cancelEl.addEventListener('touchend', handleCancel);
+      });
     }
     function onMapClick(e) {
       openNewPinPopup(e.latlng);
@@ -3124,9 +3070,8 @@ function confirmLayerDelete() {
       }
     });
 
-    const cancelHandler = (e) => { e.preventDefault(); modal.style.display = 'none'; };
-    const okHandler = (e) => {
-      e.preventDefault();
+    cancel.addEventListener('click', () => { modal.style.display = 'none'; });
+    ok.addEventListener('click', () => {
       const name = nameInput.value.trim();
       if (!name) { modal.style.display = 'none'; return; }
       if (currentTool === 'pin') {
@@ -3142,11 +3087,7 @@ function confirmLayerDelete() {
         saveMovingPin(name);
       }
       modal.style.display = 'none';
-    };
-    cancel.addEventListener('click', cancelHandler);
-    cancel.addEventListener('touchend', cancelHandler);
-    ok.addEventListener('click', okHandler);
-    ok.addEventListener('touchend', okHandler);
+    });
 
     if (gpsBtn) {
       gpsBtn.addEventListener('click', () => {
