Add Emoji Tool modal and sidebar trigger

--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@ body, #sidebar, #basemap-switcher {
       <button id="toggleVisibility">Ukryj wszystkie warstwy</button>
       <button id="loadPinsBtn">Załaduj pinezki</button>
       <div id="lista-warstw"></div>
+      <button id="emojiToolBtn">Emoji Tool</button>
     </div>
   </div>
   <input type="text" id="geosearch" placeholder="Szukaj adresu lub współrzędnych...">
@@ -3168,5 +3169,6 @@ function confirmLayerDelete() {
       </div>
     </div>
   </div>
+  <script type="module" src="emoji_tool.js"></script>
 </body>
 </html>
