--- a/index.html
+++ b/index.html
@@ -3226,7 +3226,7 @@ function confirmLayerDelete() {
   backdrop.innerHTML = `
     <div class="expe-modal" role="dialog" aria-modal="true">
       <div class="expe-hdr">
-        <h3>🔧 Masowa edycja pola <code>emoji</code> w <code>pinezki2</code></h3>
+        <h3>Masowa edycja pola <code>emoji</code> w <code>pinezki2</code></h3>
         <div class="expe-row">
           <span id="expe-user" class="expe-user">Niezalogowany</span>
           <button id="expe-login" class="expe-login">Zaloguj Google</button>
