status icon pos

--- a/index.html
+++ b/index.html
@@ -464,13 +464,13 @@ body, #sidebar, #basemap-switcher {
 }
 .status-icon {
   position: absolute;
-  bottom: -6px;
-  right: -6px;
-  z-index: 10;
+ top: -1px;
+  bottom: auto;
+  z-index: 20;
 }
 
 .status-icon.sztosy {
-  top: -8px;
+  top: -1px;
   bottom: auto;
   z-index: 20;
 }
