Add black outline to status icons

--- a/index.html
+++ b/index.html
@@ -467,6 +467,8 @@ body, #sidebar, #basemap-switcher {
  top: -1px;
   bottom: auto;
   z-index: 20;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, 0 0 1px #000;
+  filter: drop-shadow(0 0 0.5px black) drop-shadow(1px 1px 0 black) drop-shadow(-1px -1px 0 black);
 }
 
 .status-icon.sztosy {
