--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       border-left: 1px solid #ccc;
       padding: 10px;
       overflow-y: auto;
+      font-size: 12px !important;
     }
     #layer-editor {
       position: absolute;
