--- a/index.html
+++ b/index.html
@@ -442,6 +442,12 @@ body, #sidebar, #basemap-switcher {
   color: #f0f0f0;
 }
 
+    .leaflet-popup {
+    position: absolute;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
 .popup-description.scrollable {
   max-height: 150px;
   overflow-y: auto;
